changing the heading name

--- a/easyBike _ Electric Bike For Sale UK _ Ebike Store.html
+++ b/easyBike _ Electric Bike For Sale UK _ Ebike Store.html
@@ -1538,7 +1538,7 @@ Easybike Global Limited - 13802567                    </li>
         <div class="container-fluid">
             <div class="col-xs-12 sale-container padding-zero">
                                                             <div class="about-sale-text-div">
-                            <p class="sub-sale-heading">eBiking The Generations</p>
+                            <p class="sub-sale-heading">electric Bike for Next Generations</p>
                                                                             <p class="its-time-text">Buy your favourite electric bikes for him, her and kids</p>
                             <div class="sub-web-div visible-xs">
                                 <img src="./easyBike _ Electric Bike For Sale UK _ Ebike Store_files/line-cycle.png" alt="web-alt">
